# mash

./: .cmake-format.json  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
mash/: CMakeLists.txt
mash/include/mash/: diagnostic.hpp  diagnostic_bag.hpp  lexer.hpp  syntax_kind.hpp  token.hpp
mash/source/: diagnostic_bag.cpp  lexer.cpp
mashc/: CMakeLists.txt
mashc/source/: main.cpp
spec/: hello.mash  hello.mashd
tools/: run.py
